# HabitsProductivity

./: .gitignore  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml
backup-HabitsProductivity.git/: config  packed-refs
backup-HabitsProductivity.git/objects/pack/: pack-a2c2ce217506c4b71492dbf795e9f924f9e0b3c3.idx  pack-a2c2ce217506c4b71492dbf795e9f924f9e0b3c3.pack  pack-a2c2ce217506c4b71492dbf795e9f924f9e0b3c3.rev
bot/: telegram_bot.py  telegram_utils.py  urls.py  views.py
config/: celery.py  settings.py  urls.py
habits/: apps.py  models.py  serializers.py  tasks.py  telegram_utils.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_options_remove_habit_periodicity_and_more.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_rename_telegram_id_user_telegram_chat_id.py
